crates/rulesteward-fapolicyd/tests/snapshots/F02__empty-rules-d-only.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
layout=ok
no-diagnostic
